# aldev

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DESIGN_REVIEW.md  LICENSE  Makefile  PROJECT_REVIEW.md  README.md  REVIEW.md  TODO.md
.aldalog/: init.lua
.aldalog/keybindings/: alda_keys.lua
.aldalog/languages/: alda.lua
.aldalog/modules/: languages.lua  theme.lua
.aldalog/themes/: README.md
.aldev/modules/: languages.lua
.aldev/themes/: README.md
.github/workflows/: build-variant.yml  build.yml
.psnd/: init.lua  joy_history  tr7_history
.psnd/csound/: default.csd
.psnd/keybindings/: alda_keys.lua
.psnd/modules/: alda.lua  fts.lua  joy.lua  languages.lua  theme.lua
.psnd/scales/: 12tet.scl  just.scl  pythagorean.scl
.psnd/themes/: README.md
docs/: LANG_IMPL_COMPARISON.md  README.md  cheatsheet-tracker.md  cheatsheet.md  new_lang.md  psnd_osc.md  refactor.md
docs/_dev/: new_lang.md
docs/csound/: csound-deps.md  csound_audio.md  csound_plan.md
examples/bog/: default-bak.bog  default.bog
examples/csd/: xanadu.csd
include/: psnd.h  version.h
include/alda/: context.h  csound_backend.h  scala.h
include/loki/: core.h  link.h  lua.h  midi_export.h
scripts/: ctidy.py  new_lang.py  new_lang_peg.py
scripts/cmake/: psnd_alda_library.cmake  psnd_bog_library.cmake  psnd_joy_library.cmake  psnd_languages.cmake  psnd_loki_library.cmake  psnd_psnd_binary.cmake  psnd_shared_library.cmake  psnd_tests.cmake
source/: CMakeLists.txt
source/core/: CMakeLists.txt  main.c  repl.c  repl.h
source/core/include/: psnd.h
source/core/loki/: async_queue.c  async_queue.h  buffers.c  cli.c  cli.h  command.c  core.c  editor.c  host.c  host_web.c  host_web.h  internal.h  lang_bridge.c  lang_bridge.h  link.c  live_loop.c  lua.c  modal.c  renderer.h  repl_helpers.c  session.c  session.h  syntax.c
source/core/shared/: context.c  context.h  repl_commands.c
source/core/shared/async/: shared_async.c
source/core/shared/audio/: audio.h  fluid_backend.c
source/core/shared/midi/: midi.h  midi_input.c
source/core/shared/osc/: osc.c  osc.h
source/core/shared/param/: param.c  param.h
source/core/tests/loki/: CMakeLists.txt  test_async_queue.c
source/core/tests/shared/: CMakeLists.txt  test_fluid_backend.c
source/core/tests/tracker/: CMakeLists.txt  test_midi_import.c  test_plugin_notes.c  tracker_demo.c
source/core/tracker/: tracker_engine.c  tracker_engine.h  tracker_midi_import.cpp  tracker_midi_import.h  tracker_model.c  tracker_model.h  tracker_plugin.c  tracker_plugin.h  tracker_plugin_notes.c  tracker_plugin_notes.h  tracker_view.c  tracker_view.h  tracker_view_clipboard.c  tracker_view_json.c  tracker_view_terminal.c  tracker_view_terminal.h  tracker_view_theme.c  tracker_view_undo.c
source/langs/alda/: CMakeLists.txt  register.c  register.h  repl.c
source/langs/alda/backends/: midi_backend.c  tsf_backend_wrapper.c
source/langs/alda/impl/: instruments.c
source/langs/alda/include/alda/: context.h  instruments.h
source/langs/alda/tests/: test_backends.c  test_integration.c  test_microtuning.c  test_parser.c
source/langs/bog/: repl.c
source/langs/joy/: register.c  repl.c
source/langs/joy/impl/: joy_runtime.c  joy_runtime.h
source/langs/joy/midi/: joy_midi_backend.c  midi_primitives.c
source/langs/joy/tests/: test_midi.c  test_parser.c  test_primitives.c
source/langs/mhs/: CMakeLists.txt  README.md  dispatch.c  mhs_context.c  mhs_context.h  midi_ffi.c  midi_ffi.h  midi_ffi_wrappers.c  register.c  repl.c  vfs.c  vfs.h
source/langs/mhs/impl/: eval.c
source/langs/tr7/impl/: repl.c
source/langs/tr7/tests/: CMakeLists.txt  test_music.c
source/plugins/: CMakeLists.txt
source/plugins/sqlite/: CMakeLists.txt  fts.c  fts.h  lua_fts.c  lua_fts.h  test_fts.c
source/web/: editor.js  index.html  style.css
src/: alda_repl.c  lang_dispatch.c  lang_dispatch.h  loki_alda.c  loki_alda.h  loki_command.c  loki_command.h  loki_core.c  loki_editor.c  loki_internal.h  loki_languages.c  loki_lua.c  loki_modal.c  loki_selection.c  loki_selection.h  loki_syntax.c  loki_terminal.c  main.c  repl.c  repl.h
src/alda/: async.c  context.c  csound_backend.c  midi_backend.c  parser.c  scala.c  tsf_backend.c  tsf_backend_wrapper.c
src/joy/: joy_midi_backend.c  joy_midi_backend.h  midi_primitives.c
src/lang/alda/: async.c  dispatch.c  register.c  repl.c
src/lang/bog/: OVERVIEW.md  README.md  bog_repl.h  chang-to-repl.c  dispatch.c  register.c  repl.c
src/lang/joy/: dispatch.c  register.c  repl.c
src/lang/tr7/: async.c  async.h  dispatch.c  register.c  repl.c
src/loki/: alda.c  alda.h  buffers.c  buffers.h  command.c  core.c  csound.c  csound.h  editor.c  export.c  indent.c  indent.h  internal.h  joy.c  lang_bridge.c  lang_bridge.h  languages.c  languages.h  link.c  lua.c  midi_export.cpp  modal.c  repl_launcher.c  repl_launcher.h  search.c  selection.c  syntax.c  terminal.c  terminal.h  undo.c
src/loki/command/: basic.c  command_impl.h  csd.c  export.c  file.c  goto.c  link.c  substitute.c
src/loki/lang/: alda.c  alda.h  joy.c  joy.h
src/loki/syntax/: lang_alda.h  lang_csound.h  lang_joy.h  lang_scala.h  lang_scheme.h
src/shared/: context.c  context.h  repl_commands.c  repl_commands.h
src/shared/async/: shared_async.c  shared_async.h
src/shared/audio/: audio.h  (+2 more)
tests/: test_core.c  test_syntax.c
tests/alda/: CMakeLists.txt  test_csound_microtuning.c  test_interpreter.c  test_microtuning.c
tests/alda/data/: just_12.scl  just_major.scl  microtuning_test.csd  test_microtuning.lua
tests/bog/: CMakeLists.txt  test_builtins.c  test_framework.h  test_livecoding.c  test_parser.c  test_resolution.c  test_state_manager.c  test_unify.c
tests/cli/: CMakeLists.txt  test_play_command.c
tests/loki/: CMakeLists.txt  test_buffers.c  test_command.c  test_core.c  test_file_io.c  test_indent.c  test_lang_registration.c  test_lua_api.c  test_modal.c  test_row_operations.c  test_search.c  test_selection.c  test_syntax.c  test_terminal.c  test_undo.c
tests/shared/: CMakeLists.txt  test_link.c  test_midi_events.c  test_midi_export.c
(+24 files in other folders)
